feat: enhance vite with multipage config | sas

--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,9 @@
   @include pds-grid;
 }
 
-p-heading {
+.overview {
   grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
