feat: add categories into header section for shop homepage | sas

--- a/patterns/shop-landing-page/style.scss
+++ b/patterns/shop-landing-page/style.scss
@@ -7,6 +7,7 @@
   right: $pds-grid-wide-offset-base;
   display: grid;
   grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
+  row-gap: $pds-spacing-fluid-medium;
   align-items: center;
 
   @include pds-media-query-min('s') {
@@ -51,6 +52,16 @@
       @include pds-media-query-max('xs') {
         display: none;
       }
+    }
+  }
+
+  &__categories {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+
+    @include pds-media-query-max('s') {
+      display: none;
     }
   }
 }
