--- a/patterns/shop-product-list/style.scss
+++ b/patterns/shop-product-list/style.scss
@@ -97,13 +97,39 @@
   row-gap: $pds-spacing-fluid-x-large;
   margin-top: 180px; // TODO: adapt spacing
   &__media {
+    position: relative;
     grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
     grid-row: 1 / 3;
 
+    &::before {
+      content: "";
+      display: block;
+      padding-top: 133.33%;
+    }
+    @include pds-media-query-min('s') {
+      &::before {
+        padding-top: 56.25%;
+      }
+    }
+    picture {
+      position: absolute;
+      z-index: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
     img {
+      position: absolute;
       display: block;
       width: 100%;
-      height: auto;
+      border-radius: $pds-border-radius-large;
+      object-fit: cover;
+      height: 100%;
+      @include pds-media-query-min('s') {
+        object-fit: initial;
+        height: auto;
+      }
     }
   }
 
@@ -115,6 +141,7 @@
     justify-content: flex-end;
     align-items: center;
     row-gap: $pds-spacing-fluid-small;
+    z-index: 1;
   }
 }
 
@@ -134,6 +161,22 @@
     column-gap: $pds-spacing-fluid-small;
     align-items: center;
     justify-content: flex-end;
+  }
+
+  &__filter-items {
+    display: flex;
+    flex-direction: column;
+    row-gap: $pds-spacing-fluid-medium;
+  }
+
+  &__filter-settings {
+    padding-top: $pds-spacing-fluid-small;
+    p-text-field-wrapper + p-text-field-wrapper {
+      margin-top: $pds-spacing-fluid-small;
+    }
+    p-checkbox-wrapper + p-checkbox-wrapper {
+      margin-top: $pds-spacing-fluid-x-small;
+    }
   }
 
   &__item {
