--- a/patterns/shop-product-detail/style.scss
+++ b/patterns/shop-product-detail/style.scss
@@ -119,13 +119,13 @@
   }
 
   &__size {
-    p-segmented-control {
+    > p-segmented-control {
       margin-top: $pds-spacing-fluid-x-small;
     }
-    p-button-pure {
+    > p-button-pure {
       margin-top: $pds-spacing-fluid-x-small;
     }
-    p-button {
+    > p-button {
       margin-top: $pds-spacing-fluid-medium;
       width: 100%;
     }
@@ -157,13 +157,57 @@
   }
 
   &__about {
-    margin-top: $pds-spacing-fluid-large;
+    margin-top: $pds-spacing-fluid-medium;
 
     p-heading + p-text {
       margin-top: $pds-spacing-fluid-x-small;
     }
     p-text + p-text {
       margin-top: $pds-spacing-fluid-medium;
+    }
+  }
+
+  &__reviews {
+    margin-top: $pds-spacing-fluid-large;
+    > div {
+      @include pds-skeleton('light');
+      height: 40px;
+      margin-top: $pds-spacing-fluid-x-small;
+    }
+  }
+}
+
+.cart-flyout {
+  &__thumbnail {
+    width: 134px;
+    height: 134px;
+    margin-top: $pds-spacing-fluid-medium;
+    @include pds-skeleton('light');
+  }
+
+  &__heading {
+    margin-top: $pds-spacing-fluid-medium;
+  }
+
+  &__specs {
+    margin-top: $pds-spacing-fluid-small;
+  }
+
+  p-button-group {
+    margin-top: $pds-spacing-fluid-medium;
+  }
+}
+
+.size-chart {
+  margin-top: $pds-spacing-fluid-medium;
+  p-table-head {
+    p-table-head-cell:first-child {
+      @include pds-heading-medium;
+    }
+  }
+  p-table-body {
+    p-table-head-cell {
+      @include pds-heading-small;
     }
   }
 }
