--- a/patterns/shop-product-list/style.scss
+++ b/patterns/shop-product-list/style.scss
@@ -261,6 +261,20 @@
   }
 }
 
+.size-chart {
+  margin-top: $pds-spacing-fluid-medium;
+  p-table-head {
+    p-table-head-cell:first-child {
+      @include pds-heading-medium;
+    }
+  }
+  p-table-body {
+    p-table-head-cell {
+      @include pds-heading-small;
+    }
+  }
+}
+
 // footer will be implemented later
 .footer {
   @include pds-skeleton('light');
