--- a/patterns/shop-landing-page/style.scss
+++ b/patterns/shop-landing-page/style.scss
@@ -2,43 +2,43 @@
 
 .header {
   position: absolute;
-  top: $pds-spacing-fluid-medium;
-  left: $pds-grid-wide-offset-base;
-  right: $pds-grid-wide-offset-base;
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
-  row-gap: $pds-spacing-fluid-medium;
+  width: 100%;
+  @include pds-grid;
   align-items: center;
-
-  @include pds-media-query-min('s') {
-    left: $pds-grid-wide-offset-s;
-    right: $pds-grid-wide-offset-s;
-  }
-
-  @include pds-media-query-min('xxl') {
-    left: $pds-grid-wide-offset-xxl;
-    right: $pds-grid-wide-offset-xxl;
-  }
+  margin-top: $pds-spacing-fluid-medium;
 
   &__part {
     display: flex;
+    gap: $pds-spacing-fluid-small;
 
     &--start {
+      grid-column: $pds-grid-wide-column-start / span 2;
       justify-content: flex-start;
+      @include pds-media-query-min('s') {
+        grid-column: $pds-grid-wide-column-start / span 4;
+      }
     }
 
     &--end {
+      grid-column: 6 / $pds-grid-wide-column-end;
       justify-content: flex-end;
+      @include pds-media-query-min('s') {
+        grid-column: 14 / $pds-grid-wide-column-end;
+      }
     }
   }
 
   &__wordmark {
+    grid-column: 6 / span 8;
+    justify-self: center;
     @include pds-media-query-max('s') {
       display: none;
     }
   }
 
   &__crest {
+    grid-column: 4 / span 2;
+    justify-self: center;
     @include pds-media-query-min('s') {
       display: none;
     }
@@ -46,7 +46,7 @@
 
   &__button,
   &__link {
-    padding: $pds-spacing-static-x-small $pds-spacing-static-small;
+    // padding: $pds-spacing-static-x-small $pds-spacing-static-small;
 
     &--favorites {
       @include pds-media-query-max('xs') {
@@ -56,13 +56,8 @@
   }
 
   &__categories {
-    grid-column: 1 / -1;
-    display: flex;
-    justify-content: center;
-    flex-flow: wrap;
-    column-gap: $pds-spacing-fluid-medium;
-    row-gap: $pds-spacing-fluid-small;
-    white-space: nowrap;
+    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
+    justify-self: center;
 
     @include pds-media-query-max('s') {
       display: none;
