--- a/patterns/shop-landing-page/style.scss
+++ b/patterns/shop-landing-page/style.scss
@@ -107,40 +107,14 @@
 }
 
 .trending-products {
-  @include pds-grid;
-  row-gap: $pds-spacing-fluid-large;
   margin: $pds-spacing-fluid-xx-large 0;
 
   &__header {
-    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
-    row-gap: $pds-spacing-fluid-small;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-
-  &__content {
-    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
-    display: grid;
-    gap: $pds-grid-gap;
-
-    @include pds-media-query-min('s') {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-
-    // no PDS component available for link-tile-product yet
-    .link-tile-product {
-      @include pds-skeleton('light');
-      aspect-ratio: 1 / 1;
-
-      @include pds-media-query-min('xs') {
-        aspect-ratio: 4 / 3;
-      }
-
-      @include pds-media-query-min('s') {
-        aspect-ratio: 3 / 4;
-      }
-    }
+    row-gap: $pds-spacing-fluid-small;
+    padding-bottom: $pds-spacing-fluid-large;
   }
 }
 
@@ -166,6 +140,7 @@
     grid-row: 1 / 4;
 
     img {
+      display: block;
       width: 100%;
       height: auto;
     }
@@ -212,7 +187,7 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
 
       :nth-child(1) {
-          grid-column: span 2;
+        grid-column: span 2;
       }
     }
   }
