--- a/patterns/shop-product-list/style.scss
+++ b/patterns/shop-product-list/style.scss
@@ -229,6 +229,28 @@
   }
 }
 
+.flyout-search {
+  &__results {
+    margin-top: $pds-spacing-fluid-medium;
+    display: flex;
+    flex-direction: column;
+    row-gap: $pds-spacing-fluid-small;
+  }
+
+  &__result {
+    display: grid;
+    grid-template-columns: 4rem minmax(0, 1fr) auto;
+    gap: $pds-spacing-fluid-small;
+    align-items: center;
+
+    img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+  }
+}
+
 .table-size-chart {
   margin-top: $pds-spacing-fluid-medium;
 
