--- a/patterns/shop-product-list/style.scss
+++ b/patterns/shop-product-list/style.scss
@@ -172,54 +172,47 @@
   --p-flyout-width: 25rem;
   --p-flyout-max-width: 100%;
 
-  &__thumbnail {
+  img:first-of-type {
+    display: block;
     width: 10rem;
-    aspect-ratio: 1 / 1;
-    margin-top: $pds-spacing-fluid-medium;
-    @include pds-skeleton('light');
+    height: auto;
   }
 
-  &__heading {
+  &__header {
     margin-top: $pds-spacing-fluid-small;
-  }
 
-  &__description {
-    margin-top: $pds-spacing-fluid-x-small;
+    :last-child {
+      margin-top: $pds-spacing-fluid-x-small;
+    }
   }
 
   &__color,
-  &__size {
-    margin-top: $pds-spacing-fluid-small;
+  &__size,
+  &__footer {
+    margin-top: $pds-spacing-fluid-medium;
+    display: flex;
+    flex-direction: column;
+    row-gap: $pds-spacing-fluid-x-small;
 
     h4 {
       @include pds-heading-small;
       font-weight: $pds-font-weight-regular;
-      margin: $pds-spacing-fluid-small 0 0;
+      margin: 0; // ua-style reset
 
       span {
-        font-weight: $pds-font-weight-bold;
+        font-weight: $pds-font-weight-semi-bold;
       }
     }
   }
 
   &__color-swatch {
-    margin-top: $pds-spacing-fluid-x-small;
     @include pds-skeleton('light');
     height: 40px;
   }
 
   &__size {
-    p-segmented-control {
-      margin-top: $pds-spacing-fluid-x-small;
-    }
-
     p-button-pure {
-      margin-top: $pds-spacing-fluid-x-small;
-    }
-
-    p-button {
-      margin-top: $pds-spacing-fluid-medium;
-      width: 100%;
+      align-self: flex-start;
     }
   }
 }
@@ -240,7 +233,7 @@
       grid-template-columns: 4rem minmax(0, 1fr) auto;
       gap: $pds-spacing-fluid-small;
       align-items: center;
-      margin: 0 calc($pds-spacing-fluid-small * -1) !important;
+      margin: 0 calc(#{$pds-spacing-fluid-small} * -1) !important;
       padding: $pds-spacing-fluid-x-small $pds-spacing-fluid-small !important;
       text-decoration: none !important;
 
